--- a/.github/workflows/deploy-to-cloud-run.yml
+++ b/.github/workflows/deploy-to-cloud-run.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  GCP_REGION: us-central1
+  GCP_REGION: asia-south1
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GCP_IMAGE_REPO: agents
   GCP_IMAGE_NAME: whatsapp-ai-agent
