--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,14 @@ pinecone-client==6.0.0
 google-cloud-firestore==2.20.2
 google-cloud-storage==3.1.0
 
+# Document Processing
+PyPDF2==3.0.1
+pdf2image==1.17.0
+pytesseract==0.3.10
+pillow>=10.0.0,<11.0.0
+opencv-python>=4.8.0,<5.0.0
+openpyxl==3.1.2
+
 # Data Processing and Utilities
 pandas==2.2.3
 numpy==2.2.5
