--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Run Server",
             "type": "shell",
-            "command": "${workspaceFolder}/venv/bin/python -m uvicorn app.main:app --reload --host 0.0.0.0 --port 8000",
+            "command": "${workspaceFolder}/.venv/bin/python -m uvicorn app.main:app --reload --host 0.0.0.0 --port 8000",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -18,7 +18,7 @@
         {
             "label": "Run Tests",
             "type": "shell",
-            "command": "${workspaceFolder}/venv/bin/python -m pytest tests -v",
+            "command": "${workspaceFolder}/.venv/bin/python -m pytest tests -v",
             "group": {
                 "kind": "test",
                 "isDefault": true
@@ -32,7 +32,7 @@
         {
             "label": "Install Dependencies",
             "type": "shell",
-            "command": "${workspaceFolder}/venv/bin/pip install -r requirements.txt",
+            "command": "${workspaceFolder}/.venv/bin/pip install -r requirements.txt",
             "presentation": {
                 "reveal": "always",
                 "panel": "new"
