--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi==0.115.12",
+    "firebase-admin>=6.8.0",
     "google-cloud-firestore==2.20.2",
     "google-cloud-storage==3.1.0",
     "httpx==0.27.0",
