chore: update code structure for improved readability and maintainability

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "httpx==0.27.0",
     "langchain==0.3.25",
     "langchain-openai>=0.3.23",
+    "langchain-pinecone>=0.2.11",
     "numpy==2.2.5",
     "openai==1.78.1",
     "opencv-python>=4.8.0,<5.0.0",
