--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,11 @@ dependencies = [
     "pandas==2.2.3",
     "passlib[bcrypt]==1.7.4",
     "pdf2image==1.17.0",
+    "pendulum>=3.1.0",
     "pillow>=10.0.0,<11.0.0",
     "pinecone-client==6.0.0",
     "pydantic==2.11.4",
+    "pydantic-extra-types>=2.10.5",
     "pydantic-settings==2.9.1",
     "pypdf2==3.0.1",
     "pytesseract==0.3.10",
