--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "colorlog>=6.9.0",
     "fastapi==0.115.12",
     "firebase-admin>=6.8.0",
     "google-cloud-firestore==2.20.2",
