--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "pydantic==2.11.4",
     "pydantic-extra-types>=2.10.5",
     "pydantic-settings==2.9.1",
+    "pyjwt>=2.10.1",
     "pypdf2==3.0.1",
     "pytesseract==0.3.10",
     "pytest==8.3.5",
