feat: implement background job processing for document handling; add global exception handlers and update WhatsApp media functions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,5 +35,6 @@ dependencies = [
     "python-dotenv==1.1.0",
     "python-jose[cryptography]==3.4.0",
     "requests==2.32.3",
+    "uuid>=1.30",
     "uvicorn[standard]==0.34.2",
 ]
