--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pypdf2==3.0.1",
     "pytesseract==0.3.10",
     "pytest==8.3.5",
+    "pytest-mock>=3.15.1",
     "python-dateutil==2.9.0.post0",
     "python-dotenv==1.1.0",
     "python-jose[cryptography]==3.4.0",
