Add step to check specific environment variable in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,10 @@ jobs:
 
       - name: Install dependencies
         run: uv sync
-      
+
+      - name: Check specific env var
+        run: echo "environment = $ENVIRONMENT"      
+
       - name: Print all environment variables
         run: env
 
