--- a/infrastructure/terraform.tfvars.example
+++ b/infrastructure/terraform.tfvars.example
@@ -1,5 +1,6 @@
 github_token = "your_github_token_here"
-
+gcp_project_id = "your project id"
+gcp_zone_india = "India zone name"
 test_env_vars = {
   ENVIRONMENT = "your_environment_here"
   WEBHOOK_TOKEN = "your_webhook_token_here"
