--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "pdf2image==1.17.0",
     "pendulum>=3.1.0",
     "pillow>=10.0.0,<11.0.0",
-    "pinecone-client==6.0.0",
+    "pinecone==7.3.0",
     "pydantic==2.11.4",
     "pydantic-extra-types>=2.10.5",
     "pydantic-settings==2.9.1",
