--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ langchain==0.3.25
 openai==1.78.1
 
 # Vector Database
-pinecone-client==6.0.0
+pinecone==7.3.0
 
 # Google Cloud Services
 google-cloud-firestore==2.20.2
