--- a/.github/workflows/deploy-to-cloud-run.yml
+++ b/.github/workflows/deploy-to-cloud-run.yml
@@ -50,7 +50,10 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-
+      
+      - name: Print GitHub context
+        run: echo "${{ toJson(github) }}"
+        
       - name: Google Auth
         id: auth
         uses: google-github-actions/auth@v2
