--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "pendulum>=3.1.0",
     "pillow>=10.0.0,<11.0.0",
     "pinecone==7.3.0",
+    "pip>=25.2",
     "pydantic==2.11.4",
     "pydantic-extra-types>=2.10.5",
     "pydantic-settings==2.9.1",
