fix: update .dockerignore and .gitignore to include project temp files and media directories fix: modify GCP credentials path in config to have a default value refactor: clean up background_job.py by removing unused import refactor: streamline document processing functions for better readability and maintainability

--- a/.dockerignore
+++ b/.dockerignore
@@ -12,6 +12,7 @@ __pycache__/
 venv/
 ENV/
 env/
+.venv/
 *.egg-info/
 dist/
 build/
@@ -37,3 +38,12 @@ LICENSE
 # Docker
 Dockerfile
 .dockerignore
+
+# Project temp files 
+*.log
+*.tmp
+media/
+infrastructure/
+docs/
+
+docker-env/
