fix: update example.env with dummy API tokens and improve configuration settings

--- a/example.env
+++ b/example.env
@@ -1,28 +1,54 @@
+# Environment
+ENVIRONMENT=development
+
+
+# ADD THIS (Fixes OpenCV!)
+OPENCV_VIDEOIO_PRIORITY_MSMF=0
+
+WEBHOOK_TOKEN=dummy
+
 # WhatsApp API Credentials
-WHATSAPP_API_TOKEN=your_whatsapp_api_token
-WHATSAPP_PHONE_NUMBER_ID=your_whatsapp_phone_number_id
-WHATSAPP_BUSINESS_ACCOUNT_ID=your_whatsapp_business_account_id
+# This is system user token - https://business.facebook.com/latest/settings/system_users
+WHATSAPP_API_TOKEN=your_whatsapp_api_token_dummy
+WHATSAPP_PHONE_NUMBER_ID=000000000000000
+WHATSAPP_BUSINESS_ACCOUNT_ID=000000000000000
 
 # OpenAI API Credentials
-OPENAI_API_KEY=your_openai_api_key
+OPENAI_API_KEY=your_openai_api_key_dummy
+OPENAI_MODEL=gpt-5-mini
 
 # Google Cloud Services
 GCP_PROJECT_ID=your_gcp_project_id
 GCP_LOCATION=us-central1
 GCP_CREDENTIALS_PATH=path/to/your/gcp-credentials.json
+# GCP_CREDENTIALS_PATH=/Users/vinaymavi/gcp-service-accounts/chat-gpt-videos-8c75172bfb65.json
+# GOOGLE_APPLICATION_CREDENTIALS=/Users/vinaymavi/gcp-service-accounts/chat-gpt-videos-8c75172bfb65.json
+GOOGLE_APPLICATION_CREDENTIALS=path/to/your/gcp-credentials.json
+GCP_STORAGE_BUCKET=your_gcp_storage_bucket
+
+# LangChain API Settings
+LANGCHAIN_API_KEY=your_langchain_api_key
+LANGCHAIN_TRACING_V2=true
 
 # Firestore Database Settings
-FIRESTORE_COLLECTION_USERS=users
-FIRESTORE_COLLECTION_BILLS=bills
-FIRESTORE_COLLECTION_TRANSACTIONS=transactions
+FIRESTORE_COLLECTION_CHAT_HISTORY=chat_history
+FIRESTORE_COLLECTION_PROCESSED_MESSAGES=processed_messages
 
 # Vector Database (Pinecone) Settings
 PINECONE_API_KEY=your_pinecone_api_key
-PINECONE_ENVIRONMENT=your_pinecone_environment
-PINECONE_INDEX_NAME=your_pinecone_index
+PINECONE_INDEX_NAME=index1
+
+# Temporary Files
+TEMP_FILE_PATH=/tmp
+
+
+# JWT 
+JWT_SECRET_KEY=dev-secret
+JWT_ALGORITHM=HS256
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # Application Settings
-DEBUG=False
+DEBUG=True
 LOG_LEVEL=INFO
 API_HOST=0.0.0.0
 API_PORT=8000
