fix: update dependencies in pyproject.toml and requirements.txt, remove opencv-python and add pinecone-client

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,14 +16,13 @@ dependencies = [
     "langchain-pinecone>=0.2.11",
     "numpy==2.2.5",
     "openai==1.78.1",
-    "opencv-python>=4.8.0,<5.0.0",
     "openpyxl==3.1.2",
     "pandas==2.2.3",
     "passlib[bcrypt]==1.7.4",
     "pdf2image==1.17.0",
     "pendulum>=3.1.0",
     "pillow>=10.0.0,<11.0.0",
-    "pinecone==7.3.0",
+    "pinecone-client==6.0.0",
     "pip>=25.2",
     "pydantic==2.11.4",
     "pydantic-extra-types>=2.10.5",
