Refactor code structure for improved readability and maintainability

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,19 +10,16 @@ dependencies = [
     "firebase-admin>=6.8.0",
     "google-cloud-firestore==2.20.2",
     "google-cloud-storage==3.1.0",
-    "httpx==0.27.0",
     "langchain==0.3.25",
     "langchain-openai>=0.3.23",
-    "langchain-pinecone>=0.2.11",
+    "langchain-pinecone>=0.2.12",
     "numpy==2.2.5",
     "openai==1.78.1",
     "openpyxl==3.1.2",
-    "pandas==2.2.3",
     "passlib[bcrypt]==1.7.4",
     "pdf2image==1.17.0",
     "pendulum>=3.1.0",
     "pillow>=10.0.0,<11.0.0",
-    "pinecone-client==6.0.0",
     "pip>=25.2",
     "pydantic==2.11.4",
     "pydantic-extra-types>=2.10.5",
@@ -36,6 +33,7 @@ dependencies = [
     "python-dateutil==2.9.0.post0",
     "python-dotenv==1.1.0",
     "python-jose[cryptography]==3.4.0",
+    "pytz>=2025.2",
     "requests==2.32.3",
     "uuid>=1.30",
     "uvicorn[standard]==0.34.2",
