--- a/requirements.txt
+++ b/requirements.txt
@@ -31,13 +31,10 @@ certifi==2025.10.5
     #   httpcore
     #   httpx
     #   pinecone
-    #   pinecone-client
     #   requests
     #   sentry-sdk
 cffi==2.0.0
-    # via
-    #   cryptography
-    #   pytest-codspeed
+    # via cryptography
 charset-normalizer==3.4.4
     # via requests
 click==8.3.0
@@ -136,12 +133,11 @@ httplib2==0.31.0
     #   google-auth-httplib2
 httptools==0.7.1
     # via uvicorn
-httpx==0.27.0
+httpx==0.28.1
     # via
-    #   whatsapp-ai-billing-bot (pyproject.toml)
     #   fastapi
     #   fastapi-cloud-cli
-    #   langchain-tests
+    #   langchain-pinecone
     #   langsmith
     #   openai
 idna==3.11
@@ -168,16 +164,13 @@ langchain-core==0.3.79
     #   langchain
     #   langchain-openai
     #   langchain-pinecone
-    #   langchain-tests
     #   langchain-text-splitters
 langchain-openai==0.3.23
     # via
     #   whatsapp-ai-billing-bot (pyproject.toml)
     #   langchain-pinecone
-langchain-pinecone==0.2.11
+langchain-pinecone==0.2.12
     # via whatsapp-ai-billing-bot (pyproject.toml)
-langchain-tests==0.3.20
-    # via langchain-pinecone
 langchain-text-splitters==0.3.11
     # via langchain
 langsmith==0.3.45
@@ -200,8 +193,6 @@ numpy==2.2.5
     # via
     #   whatsapp-ai-billing-bot (pyproject.toml)
     #   langchain-pinecone
-    #   langchain-tests
-    #   pandas
 openai==1.78.1
     # via
     #   whatsapp-ai-billing-bot (pyproject.toml)
@@ -217,8 +208,6 @@ packaging==24.2
     #   pinecone-plugin-assistant
     #   pytesseract
     #   pytest
-pandas==2.2.3
-    # via whatsapp-ai-billing-bot (pyproject.toml)
 passlib==1.7.4
     # via whatsapp-ai-billing-bot (pyproject.toml)
 pdf2image==1.17.0
@@ -232,14 +221,10 @@ pillow==10.4.0
     #   pytesseract
 pinecone==7.3.0
     # via langchain-pinecone
-pinecone-client==6.0.0
-    # via whatsapp-ai-billing-bot (pyproject.toml)
 pinecone-plugin-assistant==1.8.0
     # via pinecone
 pinecone-plugin-interface==0.0.7
-    # via
-    #   pinecone
-    #   pinecone-client
+    # via pinecone
 pip==25.2
     # via whatsapp-ai-billing-bot (pyproject.toml)
 pluggy==1.6.0
@@ -261,8 +246,6 @@ protobuf==6.33.0
     #   googleapis-common-protos
     #   grpcio-status
     #   proto-plus
-py-cpuinfo==9.0.0
-    # via pytest-benchmark
 pyasn1==0.4.8
     # via
     #   pyasn1-modules
@@ -304,36 +287,17 @@ pytesseract==0.3.10
 pytest==8.3.5
     # via
     #   whatsapp-ai-billing-bot (pyproject.toml)
-    #   langchain-tests
-    #   pytest-asyncio
-    #   pytest-benchmark
-    #   pytest-codspeed
     #   pytest-cov
     #   pytest-mock
-    #   pytest-recording
-    #   pytest-socket
-    #   syrupy
-pytest-asyncio==0.26.0
-    # via langchain-tests
-pytest-benchmark==5.1.0
-    # via langchain-tests
-pytest-codspeed==4.1.1
-    # via langchain-tests
 pytest-cov==7.0.0
     # via whatsapp-ai-billing-bot (pyproject.toml)
 pytest-mock==3.15.1
     # via whatsapp-ai-billing-bot (pyproject.toml)
-pytest-recording==0.13.4
-    # via langchain-tests
-pytest-socket==0.7.0
-    # via langchain-tests
 python-dateutil==2.9.0.post0
     # via
     #   whatsapp-ai-billing-bot (pyproject.toml)
-    #   pandas
     #   pendulum
     #   pinecone
-    #   pinecone-client
 python-dotenv==1.1.0
     # via
     #   whatsapp-ai-billing-bot (pyproject.toml)
@@ -344,13 +308,12 @@ python-jose==3.4.0
 python-multipart==0.0.20
     # via fastapi
 pytz==2025.2
-    # via pandas
+    # via whatsapp-ai-billing-bot (pyproject.toml)
 pyyaml==6.0.3
     # via
     #   langchain
     #   langchain-core
     #   uvicorn
-    #   vcrpy
 regex==2025.9.18
     # via tiktoken
 requests==2.32.3
@@ -368,7 +331,6 @@ requests-toolbelt==1.0.0
     # via langsmith
 rich==14.2.0
     # via
-    #   pytest-codspeed
     #   rich-toolkit
     #   typer
 rich-toolkit==0.15.1
@@ -385,6 +347,8 @@ sentry-sdk==2.42.0
     # via fastapi-cloud-cli
 shellingham==1.5.4
     # via typer
+simsimd==6.5.3
+    # via langchain-pinecone
 six==1.17.0
     # via
     #   ecdsa
@@ -392,14 +356,11 @@ six==1.17.0
 sniffio==1.3.1
     # via
     #   anyio
-    #   httpx
     #   openai
 sqlalchemy==2.0.44
     # via langchain
 starlette==0.46.2
     # via fastapi
-syrupy==4.9.1
-    # via langchain-tests
 tenacity==9.1.2
     # via langchain-core
 tiktoken==0.12.0
@@ -419,7 +380,6 @@ typing-extensions==4.15.0
     #   langchain-core
     #   openai
     #   pinecone
-    #   pinecone-client
     #   pydantic
     #   pydantic-core
     #   pydantic-extra-types
@@ -432,18 +392,14 @@ typing-inspection==0.4.2
     #   pydantic
     #   pydantic-settings
 tzdata==2025.2
-    # via
-    #   pandas
-    #   pendulum
+    # via pendulum
 uritemplate==4.2.0
     # via google-api-python-client
 urllib3==2.5.0
     # via
     #   pinecone
-    #   pinecone-client
     #   requests
     #   sentry-sdk
-    #   vcrpy
 uuid==1.30
     # via whatsapp-ai-billing-bot (pyproject.toml)
 uvicorn==0.34.2
@@ -454,19 +410,11 @@ uvicorn==0.34.2
     #   fastapi-cloud-cli
 uvloop==0.22.1
     # via uvicorn
-vcrpy==7.0.0
-    # via
-    #   langchain-tests
-    #   pytest-recording
 watchfiles==1.1.1
     # via uvicorn
 websockets==15.0.1
     # via uvicorn
-wrapt==1.17.3
-    # via vcrpy
 yarl==1.22.0
-    # via
-    #   aiohttp
-    #   vcrpy
+    # via aiohttp
 zstandard==0.23.0
     # via langsmith
