feat: implement OTP generation and validation in LoginForm component with HTTP client integration

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -8,6 +8,14 @@
     "types": ["vite/client","vitest/globals", "@testing-library/jest-dom"],
     "skipLibCheck": true,
 
+    /* Resolve aliases from the project root */
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@components": ["src/components"],
+      "@/*": ["src/*"]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
