--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "celery[gcpubsub]>=5.5.3",
     "colorlog>=6.9.0",
     "fastapi[standard]==0.115.12",
     "firebase-admin>=6.8.0",
     "google-cloud-firestore==2.20.2",
+    "google-cloud-monitoring>=2.28.0",
+    "google-cloud-pubsub>=2.31.1",
     "google-cloud-storage==3.1.0",
     "langchain==0.3.25",
     "langchain-openai>=0.3.23",
