Refactor and clean up code across multiple files
- Removed unnecessary blank lines in Dashboard, GlobalContext, and LoginForm test files.
- Added missing newlines at the end of files in Header test, LoginForm test, and various infrastructure files.
- Updated Tailwind CSS configuration and ensured proper imports in index.css.
- Enhanced testing setup by ensuring '@testing-library/jest-dom' is imported correctly.
- Updated Terraform configurations and README for better clarity and organization.
- Added a new script for setting up pre-commit hooks to streamline development workflow.
- Updated package dependencies in pyproject.toml and uv.lock for better compatibility and performance.

--- a/.github/workflows/deploy-celery-to-cloud-run-jobs.yml
+++ b/.github/workflows/deploy-celery-to-cloud-run-jobs.yml
@@ -1,10 +1,10 @@
-name: Deploy to Cloud Run
+name: Deploy Celery to Cloud Run Jobs
 
 on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+  deploy-celery:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -13,7 +13,7 @@ jobs:
     env:
       ENVIRONMENT : ${{ vars.ENVIRONMENT }}
       # GCP Settings
-      GCP_IMAGE_NAME: whatsapp-ai-agent
+      GCP_IMAGE_NAME: whatsapp-ai-celery-worker
       GCP_DOCKER_REGISTRY_URI: ${{ vars.GCP_DOCKER_REGISTRY_URI }}
       GCP_PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
       GCP_LOCATION: ${{ vars.GCP_LOCATION }}
@@ -40,13 +40,14 @@ jobs:
       API_HOST: ${{ vars.API_HOST }}
       API_PORT: ${{ vars.API_PORT }}
 
-      # Secrets to be used as environment variables in Cloud Run
+      # Secrets to be used as environment variables in Cloud Run Jobs
       WEBHOOK_TOKEN: ${{ secrets.WEBHOOK_TOKEN }}
       WHATSAPP_API_TOKEN: ${{ secrets.WHATSAPP_API_TOKEN }}
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       LANGCHAIN_API_KEY: ${{ secrets.LANGCHAIN_API_KEY }}
       PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
       JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -67,20 +68,33 @@ jobs:
       - name: Configure Docker
         run: gcloud auth configure-docker ${{ env.GCP_LOCATION }}-docker.pkg.dev
 
-      - name: Build Docker image
+      - name: Build Celery Docker image
         run: |
-          docker build -t ${{env.GCP_DOCKER_REGISTRY_URI}}/${{ env.GCP_IMAGE_NAME }}:latest .
+          docker build -f Dockerfile.celery -t ${{env.GCP_DOCKER_REGISTRY_URI}}/${{ env.GCP_IMAGE_NAME }}:latest .
           docker push ${{env.GCP_DOCKER_REGISTRY_URI}}/${{ env.GCP_IMAGE_NAME }}:latest
 
-      - name: Deploy to Cloud Run
+      - name: Deploy Celery Worker to Cloud Run Jobs
         run: |
-          gcloud run deploy ${{ env.GCP_IMAGE_NAME }} \
+          gcloud run jobs create ${{ env.GCP_IMAGE_NAME }} \
             --image ${{env.GCP_DOCKER_REGISTRY_URI}}/${{ env.GCP_IMAGE_NAME }}:latest \
             --region ${{ env.GCP_LOCATION }} \
-            --platform managed \
-            --allow-unauthenticated \
-            --memory=512Mi \
-            --cpu=1 \
-            --min-instances=0 \
-            --max-instances=5 \
-            --set-env-vars ENVIRONMENT="$ENVIRONMENT",GCP_IMAGE_NAME="$GCP_IMAGE_NAME",GCP_DOCKER_REGISTRY_URI="$GCP_DOCKER_REGISTRY_URI",GCP_PROJECT_ID="$GCP_PROJECT_ID",GCP_LOCATION="$GCP_LOCATION",GCP_STORAGE_BUCKET="$GCP_STORAGE_BUCKET",FIRESTORE_COLLECTION_CHAT_HISTORY="$FIRESTORE_COLLECTION_CHAT_HISTORY",FIRESTORE_COLLECTION_PROCESSED_MESSAGES="$FIRESTORE_COLLECTION_PROCESSED_MESSAGES",WHATSAPP_PHONE_NUMBER_ID="$WHATSAPP_PHONE_NUMBER_ID",WHATSAPP_BUSINESS_ACCOUNT_ID="$WHATSAPP_BUSINESS_ACCOUNT_ID",OPENAI_MODEL="$OPENAI_MODEL",LANGCHAIN_TRACING_V2="$LANGCHAIN_TRACING_V2",PINECONE_INDEX_NAME="$PINECONE_INDEX_NAME",TEMP_FILE_PATH="$TEMP_FILE_PATH",JWT_ALGORITHM="$JWT_ALGORITHM",JWT_ACCESS_TOKEN_EXPIRE_MINUTES="$JWT_ACCESS_TOKEN_EXPIRE_MINUTES",DEBUG="$DEBUG",LOG_LEVEL="$LOG_LEVEL",API_HOST="$API_HOST",API_PORT="$API_PORT",WEBHOOK_TOKEN="$WEBHOOK_TOKEN",WHATSAPP_API_TOKEN="$WHATSAPP_API_TOKEN",OPENAI_API_KEY="$OPENAI_API_KEY",LANGCHAIN_API_KEY="$LANGCHAIN_API_KEY",PINECONE_API_KEY="$PINECONE_API_KEY",JWT_SECRET_KEY="$JWT_SECRET_KEY"
+            --cpu=2 \
+            --memory=2Gi \
+            --max-retries=3 \
+            --parallelism=1 \
+            --task-count=1 \
+            --set-env-vars ENVIRONMENT="$ENVIRONMENT",GCP_PROJECT_ID="$GCP_PROJECT_ID",GCP_LOCATION="$GCP_LOCATION",GCP_STORAGE_BUCKET="$GCP_STORAGE_BUCKET",FIRESTORE_COLLECTION_CHAT_HISTORY="$FIRESTORE_COLLECTION_CHAT_HISTORY",FIRESTORE_COLLECTION_PROCESSED_MESSAGES="$FIRESTORE_COLLECTION_PROCESSED_MESSAGES",WHATSAPP_PHONE_NUMBER_ID="$WHATSAPP_PHONE_NUMBER_ID",WHATSAPP_BUSINESS_ACCOUNT_ID="$WHATSAPP_BUSINESS_ACCOUNT_ID",OPENAI_MODEL="$OPENAI_MODEL",LANGCHAIN_TRACING_V2="$LANGCHAIN_TRACING_V2",PINECONE_INDEX_NAME="$PINECONE_INDEX_NAME",TEMP_FILE_PATH="$TEMP_FILE_PATH",JWT_ALGORITHM="$JWT_ALGORITHM",JWT_ACCESS_TOKEN_EXPIRE_MINUTES="$JWT_ACCESS_TOKEN_EXPIRE_MINUTES",DEBUG="$DEBUG",LOG_LEVEL="$LOG_LEVEL",API_HOST="$API_HOST",API_PORT="$API_PORT",WEBHOOK_TOKEN="$WEBHOOK_TOKEN",WHATSAPP_API_TOKEN="$WHATSAPP_API_TOKEN",OPENAI_API_KEY="$OPENAI_API_KEY",LANGCHAIN_API_KEY="$LANGCHAIN_API_KEY",PINECONE_API_KEY="$PINECONE_API_KEY",JWT_SECRET_KEY="$JWT_SECRET_KEY",GCP_CREDENTIALS_PATH="/docker-env/chat-gpt-videos-8c75172bfb65.json",GOOGLE_APPLICATION_CREDENTIALS="/docker-env/chat-gpt-videos-8c75172bfb65.json",OPENCV_VIDEOIO_PRIORITY_MSMF="0" \
+            || gcloud run jobs replace-job ${{ env.GCP_IMAGE_NAME }} \
+            --image ${{env.GCP_DOCKER_REGISTRY_URI}}/${{ env.GCP_IMAGE_NAME }}:latest \
+            --region ${{ env.GCP_LOCATION }}
+
+      - name: Verify deployment
+        run: |
+          echo "Celery worker deployed to Cloud Run Jobs successfully!"
+          gcloud run jobs describe ${{ env.GCP_IMAGE_NAME }} --region=${{ env.GCP_LOCATION }}
+
+      - name: Execute Celery Job (Optional Test Run)
+        run: |
+          echo "Executing Celery job to test deployment..."
+          gcloud run jobs execute ${{ env.GCP_IMAGE_NAME }} --region=${{ env.GCP_LOCATION }} --wait
+          echo "Job execution completed. Check logs for details."
